GNOME Bugzilla – Bug 656888
Preview button no longer works
Last modified: 2011-08-19 11:28:23 UTC
I don't know whether this is related to the broken horizontal flipping of the preview actor but if you try to click the "i" button it thinks it's a drag event instead of pressing the button itself.
Created attachment 194217 [details] [review] CallWindow: make the preview button reactive So it reacts to click events. Otherwise the video preview, which is reactive, will get all the events.
Merged