CallWindow: make the preview button reactive

So it reacts to click events. Otherwise the video preview,
which is reactive, will get all the events.

https://bugzilla.gnome.org/show_bug.cgi?id=656888